# openalex-incremental-updater

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  build_openalex_incremental_updater.sh  build_refresh_requester.sh  compose.yml  pyproject.toml  run_openalex_incremental_updater.sh  run_refresh_requester.sh
.github/: dependabot.yml  deploy-openalex-incremental-updater.yaml
.github/workflows/: deploy-openalex-incremental-updater.yaml  deploy-refresh-requester.yaml  deploy-staging-openalex-incremental-updater.yml  deploy-staging-refresh-requester.yml  linting.yml  manual-deploy-refresh-requester.yml  manual-deploy-staging-openalex-incremental-updater.yml  manual-deploy-staging-refresh-requester.yml  openalex_incremental_updater.yml  promote-incremental-updater-to-prod.yaml  promote-refresh-requester-to-prod.yaml  refresh_requester.yml  tests.yml
destiny_solr_setup/: .gitignore  README.md  cloud-init.yaml  pyproject.toml
destiny_solr_setup/config/: solr.service
destiny_solr_setup/destiny_solr_setup/: __init__.py  request_all_solr_content.py  solr_search_query.txt  solr_search_query_updated_july_2025.txt  solr_to_destiny_schema_conversion.py  uncompress_and_upload_to_blog_storage.py
infrastructure/: .gitignore  main.tf  readme.md  terraform.tf  variables.tf
openalex_incremental_updater/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
openalex_incremental_updater/api/: __init__.py  main.py
openalex_incremental_updater/api/core/: config.py  logger.py
openalex_incremental_updater/api/routers/: __init__.py  v1.py
openalex_incremental_updater/core/: config.py  logger.py  utils.py  version.py
openalex_incremental_updater/ingest/: __init__.py  openalex.py
openalex_incremental_updater/models/: __init__.py  data_store.py  destiny.py  openalex.py
openalex_incremental_updater/openalex_incremental_updater/: __init__.py  main.py
openalex_incremental_updater/openalex_incremental_updater/api/models/: __init__.py
openalex_incremental_updater/openalex_incremental_updater/api/routers/: utils.py  v1.py
openalex_incremental_updater/openalex_incremental_updater/core/: __init__.py  auth.py  config.py  job_state.py  jobs.py  logger.py  utils.py
openalex_incremental_updater/openalex_incremental_updater/ingest/: __init__.py  blob_storage.py  data.py  openalex.py
openalex_incremental_updater/openalex_incremental_updater/models/: auth.py  destiny.py  job_response.py  openalex.py
openalex_incremental_updater/routers/: v1.py
openalex_incremental_updater/tests/: conftest.py
openalex_incremental_updater/tests/api/core/: test_config.py
openalex_incremental_updater/tests/api/router/: test_utils.py  test_v1.py
openalex_incremental_updater/tests/core/: test_auth.py  test_jobs.py  test_utils.py
openalex_incremental_updater/tests/fixtures/: __init__.py  auth.py  destiny_schema.py  models.py  openalex_schema.py  routers.py  solr_schema.py
openalex_incremental_updater/tests/ingest/: test_blob_storage.py  test_data.py  test_ingest.py  test_openalex.py
openalex_incremental_updater/tests/models/: __init__.py  test_destiny.py  test_openalex.py
openalex_snapshot_processor/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  register_deployments.sh
openalex_snapshot_processor/dags/: openalex_snapshot_dag.py  smoke_test_azure.py  smoke_test_local.py
openalex_snapshot_processor/openalex_snapshot_processor/: __init__.py  blob_client.py  config.py  dr_client.py  enumeration.py  feeder.py  file_processor.py  main.py  models.py  registration.py  state.py
openalex_snapshot_processor/openalex_snapshot_processor/cli/: __init__.py  openalex_transforms.py  snapshot_to_jsonl.py
openalex_snapshot_processor/prefect_config/: __init__.py  register_deployments.py
openalex_snapshot_processor/prefect_config/flows/: __init__.py  logging_config.py  openalex_snapshot_flow.py  smoke_test_azure.py  smoke_test_local.py
openalex_snapshot_processor/tests/: __init__.py  conftest.py  test_blob_client.py  test_config.py  test_dr_client.py  test_enumeration.py  test_feeder.py  test_file_processor.py  test_main.py  test_models.py  test_registration.py  test_state.py
openalex_snapshot_processor/tests/fixtures/: file_processing.py
refresh_requester/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
refresh_requester/refresh_requester/: __init__.py  blob_storage.py  config.py  data.py  jobs.py  main.py  openalex_refresh.py  repository.py  token_utils.py  utils.py
refresh_requester/refresh_requester/app/: __init__.py  config.py  openalex_refresh.py
refresh_requester/tests/: __init__.py  conftest.py  test_blob_storage.py  test_config.py  test_full_pipeline.py  test_jobs.py  test_jsonl_conversion.py  test_main.py  test_openalex_refresh.py  test_repository.py  test_token.py  test_token_utils.py  test_utils.py
solr/: .gitignore  cloud-init.yaml  request_all_solr_content.py  solr_to_destiny_schema_conversion.py  uncompress_and_upload_to_blog_storage.py
solr/test_queries/: climate_health.py  climate_health.txt  climate_health_ids_db_rel.txt  climate_health_pred_incl.txt  set_overlaps.py
tests/: __init__.py  conftest.py  test_app.py  test_examples.py
tests/api/core/: test_config.py
tests/api/router/: test_utils.py  test_v1.py
tests/core/: __init__.py  test_config.py
tests/fixtures/: destiny_schema.py  routers.py
tests/ingest/: test_ingest.py  test_openalex.py
tests/models/: test_destiny.py
tests/router/: test_utils.py  test_v1.py
