[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openalex-incremental-updater"
version = "0.1.0"
description = ""
authors = ["Harry Moss <h.moss@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
