[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
explicit_package_bases = true

[tool.poetry]
authors = ["Harry Moss <h.moss@ucl.ac.uk>"]
description = ""
name = "openalex-incremental-updater"
python = "^3.10"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.6"}
loguru = "^0.7.3"
passlib = "^1.7.4"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--import-mode=importlib",
    "--verbose",
]
pythonpath = "."
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
    "INP001", # File is part of an implicit namespace package.
    "S101", # Use of `assert` detected
]}
lint.select = [
    "ALL",
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
    "classmethod",
    "pydantic.field_validator", # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
