[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
explicit_package_bases = true

[tool.poetry]
authors = ["Harry Moss <h.moss@ucl.ac.uk>"]
description = ""
name = "openalex-incremental-updater"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.6"}
loguru = "^0.7.3"
passlib = "^1.7.4"
psycopg2 = "^2.9.10"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
python = "^3.12"
requests = "^2.32.3"
sqlalchemy = "^2.0.37"
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
detect-secrets = "^1.5.0"
httpx = "^0.28.1"
pre-commit = "^4.0.1"
pytest-mock = "^3.14.0"
ruff = "^0.9.1"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
responses = "^0.25.6"
respx = "^0.22.0"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--import-mode=importlib",
  "--verbose"
]
pythonpath = "."
testpaths = [
  "tests"
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D407", # removed dashes lines under sections
  "D417", # argument description in docstring (unreliable)
  "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
  "ISC001" # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"openalex_incremental_updater/openalex_incremental_updater/ingest/__init__.py" = [
  "PERF203" # `try`-`except` within a loop incurs performance overhead
], "openalex_incremental_updater/ingest/openalex.py" = [
  "DTZ007" # Naive datetime constructed using `datetime.datetime.strptime()` without %z
], "refresh_requester/tests*" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing type annotation for function return value
  "ANN204", # Missing return type annotation for special method `__init__`
  "ARG001", # Unused function argument
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D107", # Missing docstring in __init__
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "INP001", # File is part of an implicit namespace package.
  "S101" # Use of `assert` detected
], "openalex_incremental_updater/tests*" = [
  "ARG001", # Unused function argument
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "INP001", # File is part of an implicit namespace package.
  "S101" # Use of `assert` detected
], "destiny_solr_setup/*" = [
  "BLE001" # Do not catch blind exception: Exception
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator" # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]
lint.pycodestyle.max-line-length = 120

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
