[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[dependency-groups]
dev = [
  "detect-secrets>=1.5.0,<2",
  "pre-commit>=4.0.1,<5",
  "ruff>=0.9.1,<0.10",
  "types-requests>=2.32.0.20241016,<3"
]
test = [
  "freezegun>=1.5.5",
  "pytest>=8.3.4,<9",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-cov>=6.0.0,<7",
  "pytest-mock>=3.14.0,<4",
  "respx>=0.22.0,<0.23"
]
tests = []

[project]
name = "openalex-incremental-updater"
version = "0.6.0"
description = ""
authors = [{name = "Harry Moss", email = "h.moss@ucl.ac.uk"}]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
  "fastapi[standard]>=0.119.1,<0.120",
  "httpx>=0.28.1,<0.29",
  "loguru>=0.7.3,<0.8",
  "passlib>=1.7.4,<2",
  "pydantic>=2.10.5,<3",
  "pydantic-settings>=2.7.1,<3",
  "requests>=2.32.3,<3",
  "msal>=1.32.3,<2",
  "destiny-sdk>=0.9,<0.10",
  "azure-core>=1.35.0",
  "azure-identity>=1.24.0",
  "azure-storage-blob>=12.26.0",
  "aiohttp>=3.13.2"
]

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--import-mode=importlib",
  "--verbose"
]
pythonpath = "."
testpaths = [
  "tests"
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D407", # removed dashes lines under sections
  "D417", # argument description in docstring (unreliable)
  "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
  "ISC001" # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"openalex_incremental_updater/openalex_incremental_updater/ingest/__init__.py" = [
  "PERF203" # `try`-`except` within a loop incurs performance overhead
], "openalex_incremental_updater/ingest/openalex.py" = [
  "DTZ007" # Naive datetime constructed using `datetime.datetime.strptime()` without %z
], "openalex_incremental_updater/openalex_incremental_updater/core/jobs.py" = [
  "PLR0913" # Too many arguments in function definition
], "openalex_incremental_updater/openalex_incremental_updater/ingest/blob_storage.py" = [
  "BLE001", # Do not catch blind exception: Exception
  "PLR0915" # Too many statements
], "openalex_incremental_updater/openalex_incremental_updater/core/utils.py" = [
  "ANN002", # Missing type annotation for *args
  "ANN003" # Missing type annotation for **kwargs
], "openalex_incremental_updater/tests/*" = [
  "ANN001", # Missing type annotation for function argument
  "ANN401", # Dynamically typed expressions disallowed
  "ANN002", # Missing type annotation for *args
  "ANN003" # Missing type annotation for **kwargs
], "refresh_requester/tests*" = [
  "ANN001", # Missing type annotation for function argument
  "ANN201", # Missing type annotation for function return value
  "ANN204", # Missing return type annotation for special method `__init__`
  "ARG001", # Unused function argument
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D107", # Missing docstring in __init__
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "DTZ011", # datetime.date.today() used
  "INP001", # File is part of an implicit namespace package.
  "PLR0913", # Too many arguments in function definition
  "PT012", # pytest.raises() block should contain a single simple statement
  "S101" # Use of `assert` detected
], "openalex_incremental_updater/tests*" = [
  "ARG001", # Unused function argument
  "ANN201", # Missing return type annotation for public function
  "ANN202", # Missing return type annotation for private function
  "EM101", # Exception must not use a string literal, assign to variable first
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "DTZ011", # datetime.date.today() used
  "E501", # Line too long
  "INP001", # File is part of an implicit namespace package.
  "S101", # Use of `assert` detected
  "TRY002", # Create your own exception
  "TRY003" # Avoid specifying long messages outside the exception class
], "destiny_solr_setup/*" = [
  "BLE001" # Do not catch blind exception: Exception
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator" # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]
lint.pycodestyle.max-line-length = 120

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.uv]
default-groups = [
  "dev",
  "test"
]
