[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[dependency-groups]
dev = [
  "ruff>=0.9.1,<0.10"
]
test = [
  "pytest>=8.3.4,<9",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-cov>=6.0.0,<7",
  "pytest-mock>=3.14.0,<4",
  "freezegun>=1.5.5"
]

[project]
name = "openalex-snapshot-processor"
version = "0.1.0"
description = "Bulk processor for the full OpenAlex works snapshot"
authors = [{name = "Harry Moss", email = "h.moss@ucl.ac.uk"}]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "loguru>=0.7.3,<0.8",
  "pydantic>=2.10.5,<3",
  "pydantic-settings>=2.7.1,<3",
  "requests>=2.32.3,<3",
  "destiny-sdk>=0.9,<0.10",
  "azure-identity>=1.24.0",
  "azure-storage-blob>=12.26.0",
  "openalex-incremental-updater @ file://${PROJECT_ROOT}/../openalex_incremental_updater",
  "refresh-requester @ file://${PROJECT_ROOT}/../refresh_requester",
  "prefect>=3.6.18"
]

[tool.pytest]
asyncio_mode = "auto"

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D407", # removed dashes lines under sections
  "D417", # argument description in docstring (unreliable)
  "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
  "ISC001", # simplify implicit str concatenation (ruff-format recommended)
  "PLR0913", # too many arguments
  "PLR0915" # too many statements
]
lint.per-file-ignores = {"openalex_snapshot_processor/tests/*" = [
  "ANN001", # Missing type annotation for function argument
  "ANN401", # Dynamically typed expressions disallowed
  "ANN002", # Missing type annotation for *args
  "ANN003" # Missing type annotation for **kwargs
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator" # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]
lint.pycodestyle.max-line-length = 120

[tool.setuptools]
packages = ["openalex_snapshot_processor"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
