[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=45",
  "wheel"
]

[dependency-groups]
dev = [
  "ruff>=0.9.1,<0.10"
]
test = [
  "freezegun>=1.5.5",
  "httpx>=0.28,<1",
  "pytest>=8.3.4,<9",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-cov>=6.0.0,<7",
  "pytest-mock>=3.14.0,<4"
]

[project]
name = "openalex-snapshot-processor"
version = "0.2.0"
description = "Containerised feeder that pushes pre-processed OpenAlex snapshot batches into destiny-repository"
authors = [
  {name = "Harry Moss", email = "h.moss@ucl.ac.uk"}
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "azure-identity>=1.24.0",
  "azure-storage-blob>=12.26.0",
  "destiny-sdk>=0.9,<0.10",
  "fastapi[standard]>=0.115,<1",
  "loguru>=0.7.3,<0.8",
  "orjson>=3.10,<4",
  "pydantic>=2.10.5,<3",
  "pydantic-settings>=2.7.1,<3",
  "requests>=2.32.3,<3",
  "uvicorn>=0.34,<1"
]

[tool.pytest]
asyncio_mode = "auto"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--import-mode=importlib",
  "--verbose"
]
pythonpath = "."
testpaths = [
  "tests"
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812",
  "D203",
  "D212",
  "D407",
  "D417",
  "FA102",
  "ISC001"
]
lint.per-file-ignores = {"tests/*" = [
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN401",
  "PLR2004",
  "S101",
  "S106"
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator"
]
lint.pycodestyle.max-line-length = 120

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
