[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Harry Moss <h.moss@ucl.ac.uk>"]
description = ""
name = "refresh-requester"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
azure-core = "^1.32.0"
azure-identity = "^1.20.0"
azure-storage-blob = "^12.24.1"
jsonlines = "^4.0.0"
loguru = "^0.7.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
python = "^3.12"
requests = "^2.32.3"
dotenv = "^0.9.9"
destiny-sdk = {git = "https://github.com/destiny-evidence/destiny-repository.git", subdirectory = "libs/sdk"}

[tool.poetry.group.test.dependencies]
freezegun = "^1.5.2"

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D407", # removed dashes lines under sections
  "D417", # argument description in docstring (unreliable)
  "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
  "ISC001" # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
  "ANN001", # Missing type annotation for function argument
  "ARG001", # Unused function argument
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "INP001", # File is part of an implicit namespace package.
  "S101" # Use of `assert` detected
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator" # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]
lint.pycodestyle.max-line-length = 120
