[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[dependency-groups]
dev = ["pre-commit>=4.2.0,<5"]
test = ["freezegun>=1.5.2,<2"]

[project]
name = "refresh-requester"
version = "0.3.1"
description = ""
authors = [{name = "Harry Moss", email = "h.moss@ucl.ac.uk"}]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
  "azure-core>=1.32.0,<2",
  "azure-identity>=1.20.0,<2",
  "azure-storage-blob>=12.24.1,<13",
  "fastapi>=0.119.1,<0.120",
  "jsonlines>=4.0.0,<5",
  "loguru>=0.7.3,<0.8",
  "pydantic>=2.10.6,<3",
  "pydantic-settings>=2.8.1,<3",
  "pytest>=8.3.4,<9",
  "pytest-cov>=6.0.0,<7",
  "pytest-mock>=3.14.0,<4",
  "requests>=2.32.3,<3",
  "destiny-sdk>=0.9,<0.10",
  "uvicorn>=0.35.0,<0.36"
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D407", # removed dashes lines under sections
  "D417", # argument description in docstring (unreliable)
  "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
  "ISC001" # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
  "ANN001", # Missing type annotation for function argument
  "ARG001", # Unused function argument
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "DTZ011", # datetime.date.today() used
  "INP001", # File is part of an implicit namespace package.
  "PT012", # pytest.raises() block should contain a single simple statement
  "S101" # Use of `assert` detected
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator" # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]
lint.pycodestyle.max-line-length = 120

[tool.uv]
default-groups = [
  "dev",
  "test"
]
