[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[project]
name = "refresh-requester"
version = "0.5.0"
description = ""
authors = [{name = "Harry Moss", email = "h.moss@ucl.ac.uk"}]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
  "azure-core>=1.32.0,<2",
  "azure-identity>=1.20.0,<2",
  "azure-storage-blob>=12.24.1,<13",
  "fastapi>=0.136.3",
  "jsonlines>=4.0.0,<5",
  "loguru>=0.7.3,<0.8",
  "pydantic>=2.10.6,<3",
  "pydantic-settings>=2.8.1,<3",
  "requests>=2.32.3,<3",
  "uvicorn>=0.49.0",
  "starlette>=1.3.1",
  "destiny-sdk>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.2.0,<5"
]
test = [
  "freezegun>=1.5.2",
  "pytest-asyncio>=1.4.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.1.0,<8",
  "pytest-mock>=3.14.0,<4"
]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203", # no-blank-line-before-class
  "D212", # multi-line-summary-first-line
  "D407", # removed dashes lines under sections
  "D417", # argument description in docstring (unreliable)
  "FA102", # missing from __future__ import annotations, but we don't support python < 3.10
  "ISC001" # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
  "ANN001", # Missing type annotation for function argument
  "ARG001", # Unused function argument
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "DTZ011", # datetime.date.today() used
  "INP001", # File is part of an implicit namespace package.
  "PT012", # pytest.raises() block should contain a single simple statement
  "S101" # Use of `assert` detected
]}
lint.select = [
  "ALL"
]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator" # Allow Pydantic's `@field_validator` decorator to trigger class method treatment.
]
lint.pycodestyle.max-line-length = 120

[tool.uv]
exclude-dependencies = [
  "ecdsa" # Required until https://github.com/mpdavis/python-jose/issues/390 is resolved
]
exclude-newer = "P5D"
